src/test/ui/macros/bang-after-name.stderr
error: macro names aren't followed by a `!`
  --> $DIR/bang-after-name.rs:4:17
   |
LL | macro_rules! foo! {
   |                 ^ help: remove the `!`

error: aborting due to previous error

